[package]
name = "chat"
version = "0.1.0"
edition = "2018"

[dependencies]
bincode = "1.3.3"
bytes = "1.0.1"
crossterm = { version = "0.25.0", features = ["event-stream"] }
futures = "0.3.16"
parse-display = "0.5.1"
serde = { version = "1.0.127", features = ["derive", "rc"] }
thiserror = "1.0.26"
tokio = { version = "1.10.0", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["bincode"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
tui = { version = "0.18.0", features = ["crossterm"] }
unicode-width = "0.1.8"
